# ever_blog

./: .gitignore
blog/blog/: settings.py  urls.py
blog/posts/: README.rst  admin.py  forms.py  models.py  setup.cfg  tests.py  urls.py  views.py
blog/posts/migrations/: 0001_initial.py  0002_comment_post.py  0003_auto_20201201_1730.py
blog/posts/services/: comments.py  posts.py
blog/posts/static/: style.css
blog/posts/templates/: comments.twig  index.twig  post.twig
blog/posts/templates/comments/: comments.twig
blog/posts/templates/posts/: post.twig  post_list.twig
blog/posts/templates/registration/: logged_out.html  login.html
